# smolkol

./: .env  .env.example  .gitignore  components.json  demo.md  docker-compose.yml  next.config.js  openai.md  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json
components/: appbar.tsx  bottom-nav.tsx  bounties.tsx  page.tsx  section.tsx
components/transactions/: CreateLinkButton.tsx
components/ui/: Loan.tsx  input.tsx
lib/: constants.ts  openai.ts  types.ts  utils.ts  wagmi.ts
listener/: .env.example  Cargo.toml
listener/components/transaction_listener/: Cargo.toml
listener/components/transaction_listener/src/: main.rs
pages/: _app.tsx  index.tsx
pages/api/: bounties.tsx  create-bounty.tsx  send-eth.tsx
pages/api/auth/: [...nextauth].ts
pages/api/bounty/: [slug].tsx
pages/api/bounty/[slug]/: claim.tsx
pages/bounty/: [slug].tsx
pages/create/: index.tsx
pages/redeem/: [slug].tsx  index.tsx
public/: manifest.json
styles/: globals.css
